Adding restrictions in form

--- a/style.css
+++ b/style.css
@@ -496,3 +496,27 @@ label {
 
 }
 
+
+
+
+/* js
+
+.enome {
+    visibility: hidden;
+}
+
+.eemail {
+    visibility: hidden;
+}
+
+.eemail2 {
+    visibility: hidden;
+}
+
+.eassunto {
+    visibility: hidden;
+}
+
+.emensagem {
+    visibility: hidden;
+} */
